# JournalSeed

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  conanfile.py  config.example.json  pnpm-lock.yaml
.playwright/: cli.config.json
backend/: CMakeLists.txt
backend/benchmarks/: CMakeLists.txt  domain_benchmark.cpp
backend/include/journalseed/api/: api_controller.h
backend/include/journalseed/application/: formula_graph.h  journal_service.h  models.h
backend/include/journalseed/config/: app_config.h
backend/include/journalseed/domain/: journal_entry.h  money.h
backend/include/journalseed/infrastructure/: migration_runner.h  postgres_repository.h
backend/include/journalseed/lua/: decimal.h  function_registry.h
backend/src/: main.cpp
backend/src/api/: api_controller.cpp
backend/src/application/: formula_graph.cpp  journal_service.cpp
backend/src/config/: app_config.cpp
backend/src/domain/: journal_entry.cpp  money.cpp
backend/src/infrastructure/: migration_runner.cpp  postgres_repository.cpp
backend/src/lua/: decimal.cpp  function_registry.cpp
backend/tests/: CMakeLists.txt  app_config_test.cpp  formula_graph_test.cpp  journal_entry_test.cpp  lua_registry_test.cpp  money_test.cpp
cmake/: ProjectWarnings.cmake  Sanitizers.cmake
docs/adr/: 0001-modular-monolith.md  0002-postgresql-typed-cells.md  0003-double-entry-money.md  0004-lua-sandbox-and-revisions.md  0005-http-sessions.md
docs/openapi/: journalseed.yaml
frontend/: .prettierignore  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: format.test.ts  format.ts  types.ts
frontend/src/lib/api/: client.test.ts  client.ts  schema.d.ts
frontend/src/lib/components/: AccountsPanel.svelte  AuthFrame.svelte  ColumnsPanel.svelte  Drawer.svelte  EntryDrawer.svelte  FunctionsPanel.svelte  LedgerWorkspace.svelte  LoginView.svelte  RecyclePanel.svelte  SetupView.svelte  ToastRegion.svelte  TransactionTable.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/e2e/: ledger.spec.ts
infra/postgres/: postgresql.conf
migrations/: 0001_initial.sql
scripts/dev/: configure-podman-machine.sh  database.sh
scripts/functions/: quick_expense.lua  split_cost.lua
scripts/test/: api-smoke.sh
